Update cta button in home/index template

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -77,8 +77,8 @@
             <h1 class="py-3">And now.......<br>BURGERS.</h1>
             <div class="my-3">
                 <h4>
-                    <a class="btn btn-primary" href="#" role="button">CTA</a>
-                    <a class="btn btn-secondary" href="#" role="button">CTA</a>
+                    <a class="btn btn-primary" href="{% url 'products' %}" role="button">View Menu</a>
+                    <!-- <a class="btn btn-secondary" href="#" role="button">CTA</a> -->
                 </h4>
             </div>
         </div>
