Add padding bottom to body in base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
     <title>GetWurst {% block extra_title %}{% endblock %}</title>
 </head>
 
-<body>
+<body class="pb-5">
     {% include 'includes/main-nav.html' %}
     {% include 'includes/cat-nav.html' %}
     
