--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% block content %}
-<footer id="footer" class="d-flex justify-content-center bg-light fixed-bottom">
+<footer id="footer" class="d-flex justify-content-center bg-light fixed-bottom py-1">
     <a href="https://www.facebook.com/" class="text-decoration-none me-5 text-center" rel="noopener" target="_blank"
         aria-label="Go to Get Wurst Facebook page (opens in a new tab)">
         <i class="fa-brands fa-facebook fs-1"></i>
