--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,6 +7,20 @@ html {
   height: 100%;
 }
 
+.image-flash {
+  position: absolute;
+  bottom: 5%;
+  min-width: 30%;
+  left: -2px;
+  background-color: #23BBBB;
+}
+
+.author {
+  color: white;
+  margin: 4px;
+  text-transform: uppercase;
+}
+
 abbr {
   border-bottom: none !important;
   cursor: inherit !important;
