--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -91,16 +91,11 @@
                 <a href="#" class="card-link">Delete</a>
                 <!-- Button trigger modal -->
                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#deleteProductModal">
-                    Launch demo modal
+                    DELETE MODAL
                 </button>
-                <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                    Launch demo modal
-                </button> -->
                 <!-- Modal -->
                 <div class="modal fade" id="deleteProductModal" tabindex="-1" aria-labelledby="deleteProductModalLabel"
                     aria-hidden="true">
-                <!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                    aria-hidden="true"> -->
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
@@ -109,11 +104,12 @@
                                     aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                                ...
+                                Are you sure you want to delete {{ product.name }}?
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Save changes</button>
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                <a class="btn btn-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                                <!-- <button type="button" class="btn btn-danger">CONFIRM DELETE</button> -->
                             </div>
                         </div>
                     </div>
@@ -178,6 +174,9 @@
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                                 <a class="btn btn-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                                <!-- <form action="https://google.com">
+                                    <input type="submit" value="Go to Google" />
+                                </form> -->
                             </div>
                         </div>
                     </div>
