--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -73,183 +73,58 @@
 <div class="container">
     <div class="row"> 
         {% for product in products %}
-
         <div class="card" style="width: 18rem;">
-            <img src="{{ product.image.url }}" class="card-img-top" alt="{ product.name }}">
+            <a href="{% url 'product_detail' product.id %}">
+                <img src="{{ product.image.url }}" class="card-img-top" alt="{ product.name }}">
+            </a>
             <div class="card-body">
-                <h6 class="card-title">{{ product.name }}</h6>
-                <!-- category should be a link as navigates to new page -->
+                <h6 class="card-title text-center">{{ product.name }}</h6>
+                <p class="card-text">{{ product.short_description }}</p>
+                <div class="d-grid mb-2">
+                    <a href="{% url 'product_detail' product.id %}" class="card-link btn btn-info" role="button">
+                        See More Info
+                    </a>
+                </div>
                 <a href="{% url 'products' %}?category={{ product.category }}"
                     class="card-subtitle mb-2 text-muted text-decoration-none">
                     {{ product.category }}
                 </a>
-                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                <!-- edit and delete should be buttons as performing an action -->
-                <a href="#" class="card-link">Edit</a>
-                <a href="#" class="card-link">Delete</a>
-                <!-- Button trigger modal -->
+            </div> <!-- closes card-body -->
+            <!-- Button trigger modal -->
+            <div class="d-grid gap-2">
                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#deleteProductModal">
-                    DELETE MODAL
+                    DELETE 
                 </button>
-                <!-- Modal -->
-                <div class="modal fade" id="deleteProductModal" tabindex="-1" aria-labelledby="deleteProductModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h1 class="modal-title fs-5" id="deleteProductModalLabel">Modal title</h1>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                    aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                Are you sure you want to delete {{ product.name }}?
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                                <a class="btn btn-danger" href="{% url 'delete_product' product.id %}">Delete</a>
-                                <!-- <button type="button" class="btn btn-danger">CONFIRM DELETE</button> -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-
-        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
-            <div class="card">
-                <img src="{{ product.image.url }}" class="menu-img" alt="{{ product.name }}">
-                <div class="card-body text-center">
-                    <h5 class="card-title">{{ product.name }}</h5>
-                    <!-- <p class="card-text">{{ product.short_description }}</p> -->
-                </div>
-                <!-- <div class="card-body">
-                    <p class="card-text">{{ product.description }}</p>
-                </div> -->
-                <!-- WHY USING AN UL -->
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item text-muted"> 
-                        <a href="{% url 'products' %}?category={{ product.category }}">
-                             Category: {{ product.category }}
-                        </a>
-                    </li>
-                    <li class="list-group-item">£{{ product.price }}</li>
-                </ul> 
-                {% if request.user.is_superuser %}
                 <a class="btn btn-secondary" href="{% url 'edit_product' product.id %}">
                     Edit
                 <a>
-                <!-- <div class="g-drid">
-                    <button type="button" class="btn btn-primary">
-                        <a href="{% url 'edit_product' product.id %}" class="card-link btn btn-secondary"
-                            role="button"> EDIT 98</a>
-                    </button>
-                </div> -->
-                <!-- <button type="button" class="btn btn-primary">
-                    <a href="{% url 'edit_product' product.id %}" class="card-link btn btn-secondary"
-                        role="button">Edit</a>
-                </button> -->
-                <!-- <small class="ml-3">
-                    <a href="{% url 'edit_product' product.id %}" class="card-link btn btn-info" role="button">Edit</a>
-                </small> -->
-                <!-- Button trigger modal -->
-                <button type="button" class="btn btn-danger" data-bs-toggle="modal"
-                    data-bs-target="#deleteProductModal{{ product.id }}">
-                    Delete
-                </button>
-                <!-- Modal -->
-                <div class="modal fade" id="deleteProductModal{{ product.id }}" data-bs-backdrop="static"
-                    data-bs-keyboard="false" tabindex="-1" aria-labelledby="deleteProductLabel" aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="staticBackdropLabel">Delete</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                    aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">Are you sure you want to delete {{ product.name }}? </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                                <a class="btn btn-danger" href="{% url 'delete_product' product.id %}">Delete</a>
-                                <!-- <form action="https://google.com">
-                                    <input type="submit" value="Go to Google" />
-                                </form> -->
-                            </div>
-                        </div>
-                    </div>
-                </div> 
-                {% else %} 
-                <!-- <div class="card-body">
-                    <a href="{% url 'product_detail' product.id %}" class="card-link btn btn-info" role="button">See
-                        More Info</a>
-                </div> -->
-                <form class="form container" action="{% url 'add_to_cart' product.id %}" method="POST"> {% csrf_token %}
-                    <div class="form-row">
-                        <div class="col-12">
-                            <h3>Add to Cart</h3>
-                            <p class="mt-3">
-                                <strong>Quantity:</strong>
-                            </p>
-                            <div class="form-group w-100">
-                                <div class="input-group">
-                                    <div class="input-group-prepend">
-                                        <button class="decrement-qty btn 
-                                            btn-black rounded-0" data-item_id="{{ product.id }}"
-                                            id="decrement-qty_{{ product.id }}">
-                                            <span class="icon">
-                                                <i class="fas fa-minus"></i>
-                                            </span>
-                                        </button>
-                                    </div> 
-                                    {% for item in cart_items %} 
-                                    <input class="form-control qty_input" type="number" name="quantity" value="{{ item.quantity }}" min="1" max="15"
-                                        data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}"> 
-                                    {% empty %} 
-                                    <input class="form-control qty_input" type="number" name="quantity" value=0 min="0"
-                                        max="15" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
-                                    {% endfor %} 
-                                    <div class="input-group-append">
-                                        <button class="increment-qty btn 
-                                            btn-black rounded-0" data-item_id="{{ product.id }}"
-                                            id="increment-qty_{{ product.id }}">
-                                            <span class="icon">
-                                                <i class="fas fa-plus"></i>
-                                            </span>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12"> 
-                            {% if cart %} 
-                            <a href="{% url 'checkout' %}" class="btn">
-                                <span class="icon">
-                                    <i class="fas fa-chevron-left"></i>
-                                </span>
-                                <span class="text-uppercase">Checkout</span>
-                            </a> 
-                            {% endif %} 
-                            <input type="submit" class="btn btn-info" value="Add to Cart">
-                        </div>
-                        <!-- hidden form element to redirect back to page came from (redirect_url) -->
-                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                    </div>
-                </form> 
-                <!-- <div class="card-body">
-                    <a href="{% url 'product_detail' product.id %}" class="card-link btn btn-info" role="button">See
-                        More Info</a>
-                </div> -->
-                {% endif %}
             </div>
-        </div> 
+            <!-- Modal -->
+            <div class="modal fade" id="deleteProductModal" tabindex="-1" aria-labelledby="deleteProductModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="deleteProductModalLabel">Modal title</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            Are you sure you want to delete {{ product.name }}?
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                            <a class="btn btn-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                        </div>
+                    </div>
+                </div>
+            </div> <!-- closes modal -->
+        </div> <!-- closes card -->
+    </div> <!-- closes row -->
         {% empty %} 
         NO PRODUCTS YET 
         {% endfor %} 
-    </div>
-</div> 
+</div> <!-- closes container -->
 {% endblock %} 
 {% block postloadjs %} 
 {{ block.super }}
