Add template vars to products/detail

--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -79,7 +79,7 @@
             </a>
             <div class="card-body">
                 <h6 class="card-title text-center">{{ product.name }}</h6>
-                <p class="card-text">{{ product.short_description }}</p>
+                <p class="card-text">{{ product.description }}</p>
                 <div class="d-grid mb-2">
                     <a href="{% url 'product_detail' product.id %}" class="card-link btn btn-info" role="button">
                         See More Info
