--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -4,124 +4,20 @@
 {% block content %}
 
 <div class="container">
-    <div class="row">
-        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
-            <div class="card h-100">
-                <div class="card-header">
-                    NAME: {{ product.name }}
-                </div>
-                {% if product.image %}
-                <a href="{{ product.image.url }}" target="_blank">
-                    <img src="{{ product.image.url }}" class="card-img-top" 
-                        alt="{{ product.name }}">
-                </a>
-                {% endif %}
-                <div class="card-body">
-                    <h5 class="card-title">Description:</h5>
-                    <p class="card-text">{{ product.description }}</p>
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
-                        Category: {{ product.category }}</li>
-                    <li class="list-group-item">Price: £{{ product.price }}</li>
-                </ul>
-                <!-- use post method as adding info (cart) to server -->
-                <form class="form" action="{% url 'add_to_cart' product.id %}"
-                     method="POST">
-                    {% csrf_token %}
-                    <div class="form-row">
-                        <div class="col-12">
-                            <p class="mt-3"><strong>Quantity:</strong></p>
-                            <div class="form-group w-75">
-                                <div class="input-group">
-                                    <!-- ALTERNATIVE TO PREPEND FOR BS5??????? -->
-                                    <div class="input-group-prepend">
-                                        <button class="decrement-qty btn 
-                                            btn-black rounded-0"
-                                            data-item_id="{{ product.id }}" 
-                                                id="decrement-qty_{{ product.id }}">
-                                            <span class="icon">
-                                                <i class="fas fa-minus"></i>
-                                            </span>
-                                        </button>
-                                    </div>
-                                    <!-- make form value dynamic -->
-                                    <input class="form-control qty_input"
-                                        type="number" name="quantity" value="1"
-                                        min="1" max="15" 
-                                        data-item_id="{{ product.id }}" 
-                                        id="id_qty_{{ product.id }}">
-                                    <div class="input-group-append">
-                                        <button class="increment-qty btn 
-                                            btn-black rounded-0"
-                                            data-item_id="{{ product.id }}" 
-                                            id="increment-qty_{{ product.id }}">
-                                            <span class="icon">
-                                                <i class="fas fa-plus"></i>
-                                            </span>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-
-                        <div class="col-12">
-                            <a href="{% url 'products' %}" class="btn">
-                                <span class="icon">
-                                    <i class="fas fa-chevron-left"></i>
-                                </span>
-                                <span class="text-uppercase">
-                                    Keep Shopping
-                                </span>
-                            </a>
-                            <input type="submit" class="btn" value="Add to Cart">
-                        </div>
-                        <!-- hidden form element to redirect back to page came from (redirect_url) -->
-                        <input type="hidden" name="redirect_url" 
-                            value="{{ request.path }}">
-                    </div>
-                </form>
-
-                <div class="card-body">
-                    {% if request.user.is_superuser %}
-                    <small class="ml-3">
-                        <a href="{% url 'edit_product' product.id %}">
-                            Edit
-                        </a>
-                        <a class="text-danger" 
-                            href="{% url 'delete_product' product.id %}">Delete
-                        </a>
-                    </small>
-                    {% endif %}
-                </div>
-            </div>
-        </div>
-    </div>
-
     <div class="card mb-3" style="max-width: 540px;">
         <div class="row g-0">
             <div class="col-md-4">
-                <img src="..." class="img-fluid rounded-start" alt="...">
+                <img src="{{ product.image.url }}" class="img-fluid rounded-start" alt="{{ product.name }}">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional
-                        content. This content is a little bit longer.</p>
+                    <h5 class="card-title">{{ product.name }}</h5>
+                    <p class="card-text">{{ product.description }}</p>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
 </div>
 
 
