--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -13,7 +13,61 @@
                 <div class="card-body">
                     <h5 class="card-title">{{ product.name }}</h5>
                     <p class="card-text">{{ product.description }}</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    
+                    <form class="form" action="{% url 'add_to_cart' product.id %}" method="POST">
+                        {% csrf_token %}
+                        <div class="form-row">
+                            <div class="col-12">
+                                <p class="mt-3"><strong>Quantity:</strong></p>
+                                <div class="form-group w-75">
+                                    <div class="input-group">
+                                        <!-- ALTERNATIVE TO PREPEND FOR BS5??????? -->
+                                        <div class="input-group-prepend">
+                                            <button class="decrement-qty btn 
+                                            btn-black rounded-0" data-item_id="{{ product.id }}"
+                                                id="decrement-qty_{{ product.id }}">
+                                                <span class="icon">
+                                                    <i class="fas fa-minus"></i>
+                                                </span>
+                                            </button>
+                                        </div>
+                                        <!-- make form value dynamic -->
+                                        <input class="form-control qty_input" type="number" name="quantity" value="1"
+                                            min="1" max="15" data-item_id="{{ product.id }}"
+                                            id="id_qty_{{ product.id }}">
+                                        <div class="input-group-append">
+                                            <button class="increment-qty btn 
+                                            btn-black rounded-0" data-item_id="{{ product.id }}"
+                                                id="increment-qty_{{ product.id }}">
+                                                <span class="icon">
+                                                    <i class="fas fa-plus"></i>
+                                                </span>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                            <div class="col-12">
+                                <a href="{% url 'products' %}" class="btn">
+                                    <span class="icon">
+                                        <i class="fas fa-chevron-left"></i>
+                                    </span>
+                                    <span class="text-uppercase">
+                                        Keep Shopping
+                                    </span>
+                                </a>
+                                <input type="submit" class="btn" value="Add to Cart">
+                            </div>
+                            <!-- hidden form element to redirect back to page came from (redirect_url) -->
+                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                        </div>
+                    </form>
+
+
+                    <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+
                 </div>
             </div>
         </div>
