Remove unused classes in products/detail template

--- a/products/templates/products/includes/quantity_input_script.html
+++ b/products/templates/products/includes/quantity_input_script.html
@@ -1,4 +1,4 @@
-<!-- below taken from code institute boutique ado walkthrough -->
+<!-- below taken and adapted from code institute boutique ado walkthrough -->
 
 <script>
     // Disable +/- buttons outside 1-15 range
