Correct faq app like return

--- a/faq/templates/faq/view_faq.html
+++ b/faq/templates/faq/view_faq.html
@@ -98,7 +98,7 @@
                         <button type="submit" name="answer_id" class="border-0" 
                             value="{{ answer.id }}"><i class="fa-solid fa-thumbs-up"></i>
                         </button>
-                        <input type="hidden" name="next" value=" {{ answer.id }}">
+                        <!-- <input type="hidden" name="next" value=" {{ answer.id }}"> -->
                     </form>
                     {% endif %}
                     Liked by {{ answer.like.all.count }} number of users.
