--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -48,7 +48,7 @@
                      </a>
                  </li>
                  <li class="nav-item">
-                     <a class="nav-link" href="{% url 'view_faq' %}">
+                     <a class="nav-link" href="{% url 'faq' %}">
                          <i class="fa-solid fa-circle-question"></i>
                          <abbr title="Frequently Asked Questions">FAQs</abbr>
                      </a>
