Remove liked var from faq answer func

--- a/faq/templates/faq/faq.html
+++ b/faq/templates/faq/faq.html
@@ -72,7 +72,12 @@
 
 <div class="container">
     <h1>FAQ!!!</h1>
-
+    <h1>We hear you may have a question for Get Wurst?</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate id 
+        porro adipisci quas iste error ea vero recusandae, laboriosam corrupti, 
+        tempore necessitatibus maiores ipsam praesentium ut? Aspernatur, eaque. 
+        Dolorem, placeat.</p>
+    
     <div class="accordion" id="faqAccordion">
         {% for question in questions %}
         <div class="accordion-item">
