--- a/faq/templates/faq/faq.html
+++ b/faq/templates/faq/faq.html
@@ -95,27 +95,25 @@
                 data-bs-parent="#faqAccordion">
                 <div class="accordion-body">
                     {% for answer in question.question_answer.all %}
-                    {% if answer.status == 1 %}
-                    <p>{{ answer.body | safe }}</p>
-                    {% if user.is_authenticated %}
-                    <form action="{% url 'like' answer.pk %}" method="POST" class="d-inline">
-                        {% csrf_token %}
-                        <!-- CHANGE BUTTON TO TOGGLE BETWEEN SOLID AND NOT -->
-                        <button type="submit" name="answer_id" class="border-0" 
-                            value="{{ answer.id }}"><i class="fa-solid fa-thumbs-up"></i>
-                        </button>
-                        <!-- <input type="hidden" name="next" value=" {{ answer.id }}"> -->
-                    </form>
-                    {% if liked %}
-                    YOU HAVE LIKED
-                    {% endif %}
-                    {% endif %}
-                    <span>Liked by {{ answer.like.all.count }} user{{ answer.like.all.count|pluralize }}</span>
+                        {% if answer.status == 1 %}
+                        <p>{{ answer.body | safe }}</p>
+                            {% if user.is_authenticated %}
+                                <form action="{% url 'like' answer.pk %}" method="POST" class="d-inline">
+                                    {% csrf_token %}
+                                    <!-- CHANGE BUTTON TO TOGGLE BETWEEN SOLID AND NOT -->
+                                    <button type="submit" name="answer_id" class="border-0" 
+                                        value="{{ answer.id }}"><i class="fa-solid fa-thumbs-up"></i>
+                                    </button>
+                                    <!-- <input type="hidden" name="next" value=" {{ answer.id }}"> -->
+                                </form>
+                                <span class="d-inline-block mb-5" >Liked by {{ answer.like.all.count }}
+                                user{{ answer.like.all.count|pluralize }}</span>
                     
-                    <!-- {% if forloop.last %}
-                    ADD ANOTHER ANSWER
-                    {% endif %} -->
-                    {% endif %}
+                                {% if forloop.last %}
+                                    <p>ADD ANOTHER ANSWER</p>
+                                {% endif %}
+                            {% endif %} 
+                        {% endif %}
                     {% endfor %}
                     <form action="{% url 'answer' question.id %}" method="post">
                         {% csrf_token %}
@@ -128,11 +126,12 @@
             {% endfor %}
         </div>
     </div>
+    <form class="mx-3" action="{% url 'question' %}" method="post">
+        {% csrf_token %}
+        {{ question_form | crispy }}
+        <input type="submit" value="Submit Question">
+    </form>
 </div>
 
-<form action="{% url 'question' %}" method="post">
-    {% csrf_token %}
-    {{ question_form | crispy }}
-    <input type="submit" value="Submit Question">
-</form>
+
 {% endblock %}
