--- a/faq/templates/faq/faq.html
+++ b/faq/templates/faq/faq.html
@@ -77,8 +77,11 @@
         porro adipisci quas iste error ea vero recusandae, laboriosam corrupti, 
         tempore necessitatibus maiores ipsam praesentium ut? Aspernatur, eaque. 
         Dolorem, placeat.</p>
-    <button class="btn btn-primary" id="btnExpandAll">Expand All</button>
-    <button class="btn btn-primary" id="btnCollapseAll">collapse All</button>
+
+    <!-- HOW ADD ARIA-CONTROLS WHEN DON;T KNOW HOW MANY ANSWERS??????? -->
+    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target=".multi-collapse"
+        aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2">Toggle Answers</button>
+    
     <div class="accordion" id="faqAccordion">
         {% for question in questions %}
         <div class="accordion-item">
@@ -90,11 +93,11 @@
                     {{ question.body }}
                 </button>
             </h2>
-            <div id="collapse{{question.id}}" class="accordion-collapse collapse 
+            <div id="collapse{{question.id}}" class="accordion-collapse collapse multi-collapse
                 {% if forloop.first %} show {% endif %}" 
                 aria-labelledby="heading{{question.id}}"
                 data-bs-parent="#faqAccordion">
-                <div class="accordion-body">
+                <div class="accordion-body ">
                     {% for answer in question.question_answer.all %}
                         {% if answer.status == 1 %}
                         <p>{{ answer.body | safe }}</p>
@@ -108,7 +111,8 @@
                                     <!-- <input type="hidden" name="next" value=" {{ answer.id }}"> -->
                                 </form>
                                 <span class="d-inline-block mb-5" >Liked by {{ answer.like.all.count }}
-                                user{{ answer.like.all.count|pluralize }}</span>                
+                                user{{ answer.like.all.count|pluralize }}</span>
+                    
                                 {% if forloop.last %}
                                     <p>ADD ANOTHER ANSWER</p>
                                 {% endif %}
@@ -123,22 +127,22 @@
                 </div>  
             </div>
         </div>
-        {% endfor %}  
+        {% endfor %}
     </div>
-    <form action="{% url 'question' %}" method="post">
-        {% csrf_token %}
-        {{ question_form | crispy }}
-        <input type="submit" value="Submit Question">
-    </form>
 </div>
+
+<form action="{% url 'question' %}" method="post" class="my-3 mx-3">
+    {% csrf_token %}
+    {{ question_form | crispy }}
+    <input type="submit" value="Submit Question">
+</form>
 
 {% endblock %}
 
-<!-- <script>
+<script>
     $(document).ready(function() {
         $('#btnExpandAll').click(function() {
             $('.accordion-collapse collapse').collapse('show');
         });
     });
-
-</script> -->
+</script>
