Add event img alt text to card

--- a/events/templates/events/all.html
+++ b/events/templates/events/all.html
@@ -82,11 +82,8 @@
         obcaecati quidem.</p>
 </div>
 
-
-
 <div class="container-fluid">
     <div class="row">
-        <!-- Blog Entries Column -->
         <div class="col-12 mt-3">
             <div class="row">
                 {% for event in events %}
@@ -94,7 +91,7 @@
                     <div class="card mb-4">
                         <div class="card-body">
                             <div class="image-container">
-                                <img class="card-img-top" src="{{ event.image.url }}" alt="{{ event.name }}">
+                                <img class="card-img-top menu-img" src="{{ event.image.url }}" alt="{{ event.name }}">
                                 <a href="{{ event.link }}" target="_blank" rel="noopener" aria-label="Visit {{ event.name }}'s page (opens in a new tab)">
                                     <h1 class="card-title">{{ event.name }}</h1>
                                 </a>
