Add container for event cards

--- a/events/templates/events/all.html
+++ b/events/templates/events/all.html
@@ -82,7 +82,7 @@
         obcaecati quidem.</p>
 </div>
 
-<div class="container-fluid">
+<div class="container">
     <div class="row">
         <div class="col-12 mt-3">
             <div class="row">
