--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,4 +1,4 @@
- <nav class="navbar navbar-expand-lg bg-light w-100">
+ <nav class="navbar navbar-expand-lg w-100">
      <div class="container">
          <a class="navbar-brand" href="{% url 'home' %}">
              <img src="/media/logo.png"
