Add my-5 to products/all container

--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -69,8 +69,7 @@
 {% endblock %}
 
 {% block content %}
-
-<div class="container">
+<div class="container my-5">
     <div class="row"> 
         {% for product in products %}
         <div class="card" style="width: 18rem;">
